WIP: /train simplify
